# jupyterhub-headerauthenticator

./: README.md  pyproject.toml
jupyterhub_headerauthenticator/: __init__.py  auth.py
